[package]
name = "healthcheck"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = "2.9.1"

[dev-dependencies]
httpmock = "0.6.8"
openssl = { version = "0.10", features = ["vendored"] }
