[package]
name = "healthcheck"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = "2.11.0"

[dev-dependencies]
httpmock = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
