[package]
name = "janus-cli"
authors = ["Natalia Maximo <iam@natalia.dev>"]
version = "0.1.0"
edition = "2021"
description = "A template project to bootstrap new CLIs in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std", "clock"] }
clap = { version = "4.1.8", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
janus-common = { path = "../janus-common", features = ["validation"] }
janus = { path = "../janus" }
tokio = { version = "1.29.1", features = ["rt", "net", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = { version = "0.3.17", features = ["serde_json"] }

[build-dependencies]
clap = { version = "4.1.8", default-features = false, features = ["help", "usage", "derive"] }
clap_mangen = "0.2.9"

[features]
default = ["env", "colors", "wrap_help"]
env = ["clap/env"]
wrap_help = ["clap/wrap_help"]
colors = ["clap/color"]

[[bin]]
name = "janus"
path = "src/main.rs"
