[package]
name = "janus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"
janus = { path = "../janus" }
janus-common = { path = "../janus-common", features = ["validation"] }
config = { version = "0.13.3", default-features = false }
serde = { version = "1.0.175", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
