[package]
name = "janus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
reqwest = { version = "0.11.18", default-features = false }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
janus-common = { path = "../janus-common" }
tokio = { version = "1.29.1" }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"


[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
