[package]
name = "pixy-core"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
license = "MIT"
repository = "https://github.com/cryptaliagy/pixy"
readme = "../README.md"
description = "A core library for Pixy, implementing the SensorGateway and its Handlers"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
reqwest = { version = "0.11.22", default-features = false }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
tokio = { version = "1.33.0" }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
jsonschema = { version = "0.17.1", default-features = false, features = ["resolve-file"] }
serde_yaml = { version = "0.9.25"}
minijinja = { version = "1.0.9", default-features = false, features = ["macros"] }



[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
httpmock = "0.6.8"
openssl = { version = "0.10", features = ["vendored"] }
