[package]
name = "pixy-core"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
license = "MIT"
repository = "https://github.com/cryptaliagy/pixy"
readme = "../README.md"
description = "A core library for Pixy, implementing the SensorGateway and its Handlers"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.82"
reqwest = { version = "0.12.7", default-features = false }
reqwest-middleware = { version = "0.3.3", features = ["json"] }
reqwest-retry = "0.6.1"
tokio = { version = "1.40.0" }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
jsonschema = { version = "0.19.1", default-features = false, features = [
    "resolve-file",
] }
serde_yaml = { version = "0.9.34" }
minijinja = { version = "2.2.0", default-features = false, features = [
    "macros",
] }


[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
httpmock = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
