[package]
name = "pixy-server"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
description = "A web server implementation of the Pixy service"
license = "MIT"
repository = "https://github.com/cryptaliagy/pixy"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
pixy-core = { path = "../pixy-core" }
config = { version = "0.13.4", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "net", "tracing", "macros"], default-features = false }

[dev-dependencies]
async-trait = "0.1.74"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0.108"
