[package]
name = "pixy-server"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
description = "A web server implementation of the Pixy service"
license = "MIT"
repository = "https://github.com/cryptaliagy/pixy"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
pixy-core = { path = "../pixy-core" }
config = { version = "0.14.0", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "net", "tracing", "macros"], default-features = false }

[dev-dependencies]
async-trait = "0.1.82"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.4", features = ["full"] }
serde_json = "1.0.128"
