[package]
name = "pixy"
authors = ["Natalia Maximo <iam@natalia.dev>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cryptaliagy/pixy"
readme = "README.md"
description = "A multi-target sensor output relay built for secure, efficient IoT. Made for use with the Pimoroni Enviro Pico boards."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std", "clock"] }
clap = { version = "4.1.8", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
pixy-core = { path = "../pixy-core" }
pixy-server = { path = "../pixy-server" }
tokio = { version = "1.29.1", features = ["full"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = { version = "0.3.17", features = ["serde_json"] }

[build-dependencies]
clap = { version = "4.1.8", default-features = false, features = ["help", "usage", "derive"] }
clap_mangen = "0.2.9"

[features]
default = ["env", "colors", "wrap_help"]
env = ["clap/env"]
wrap_help = ["clap/wrap_help"]
colors = ["clap/color"]

[[bin]]
name = "pixy"
path = "src/main.rs"


[package.metadata.deb]
name = "pixy"
license-file = ["../LICENSE", "0"]
depends = "adduser"
assets = [
    ["target/release/pixy", "/usr/bin/", "755"],
    ["../target/man/pixy.1", "/usr/share/man/man1/", "644"],
    ["../target/man/pixy-validate.1", "/usr/share/man/man1/", "644"],
    ["../target/man/pixy-emit.1", "/usr/share/man/man1/", "644"],
    ["../target/man/pixy-serve.1", "/usr/share/man/man1/", "644"],
    ["../example-configs/echo-server.yaml", "/var/lib/pixy/pixy.yaml.example", "640"]
]
maintainer-scripts = "../pkg/debian/"
systemd-units = { enable = false }