[package]
name = "pixy"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
license = "MIT"
repository = "https://github.com/cryptaliagy/pixy"
readme = "../README.md"
description = "A multi-target sensor output relay built for secure, efficient IoT. Made for use with the Pimoroni Enviro Pico boards."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.9", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
pixy-core = { path = "../pixy-core" }
pixy-server = { path = "../pixy-server" }
tokio = { version = "1.38.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["serde_json"] }

[build-dependencies]
clap = { version = "4.5.9", default-features = false, features = ["help", "usage", "derive"] }
clap_mangen = "0.2.20"

[features]
default = ["env", "colors", "wrap_help"]
env = ["clap/env"]
wrap_help = ["clap/wrap_help"]
colors = ["clap/color"]

[[bin]]
name = "pixy"
path = "src/main.rs"


[package.metadata.deb]
name = "pixy"
extended-description-file = "README.md"
license-file = ["../LICENSE", "0"]
depends = "adduser"
assets = [
    ["target/release/pixy", "/usr/bin/", "755"],
    ["../target/man/pixy.1", "/usr/share/man/man1/", "644"],
    ["../target/man/pixy-validate.1", "/usr/share/man/man1/", "644"],
    ["../target/man/pixy-emit.1", "/usr/share/man/man1/", "644"],
    ["../target/man/pixy-serve.1", "/usr/share/man/man1/", "644"],
    ["../example-configs/echo-server.yaml", "/var/lib/pixy/pixy.yaml.example", "640"]
]
maintainer-scripts = "../pkg/debian/"
systemd-units = { enable = false }

[package.metadata.binstall]
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.amd64{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.arm64{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-gnueabi]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-gnueabihf]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7hf{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.amd64{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.arm64{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-musleabi]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-musleabihf]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7hf{ archive-suffix }"
